--- a/package.json
+++ b/package.json
@@ -1,40 +1,45 @@
 {
-  "name": "mvc-boilerplate",
-  "version": "1.0.0",
-  "description": "Boilerplate para estrutura MVC em JavaScript com PostgreSQL e testes",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "init-db": "node scripts/runSQLScript.js"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "pg": "^8.15.6"
-  },
-  "devDependencies": {
-    "jest": "^27.0.6",
-    "nodemon": "^2.0.22",
-    "supertest": "^6.1.3"
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/afonsobrandaointeli/mvc-boilerplate.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/afonsobrandaointeli/mvc-boilerplate/issues"
-  },
-  "homepage": "https://github.com/afonsobrandaointeli/mvc-boilerplate#readme"
+    "$schema": "http://json.schemastore.org/package",
+    "name": "mvc-boilerplate",
+    "version": "1.0.0",
+    "description": "Boilerplate para estrutura MVC em JavaScript com PostgreSQL e testes",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
+        "init-db": "node scripts/runSQLScript.js"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "ejs": "^3.1.10",
+        "express": "^4.21.2",
+        "express-session": "^1.18.1",
+        "method-override": "^3.0.0",
+        "pg": "^8.15.6"
+    },
+    "devDependencies": {
+        "jest": "^27.0.6",
+        "nodemon": "^3.1.10",
+        "supertest": "^6.1.3"
+    },
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/afonsobrandaointeli/mvc-boilerplate.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+        "url": "https://github.com/afonsobrandaointeli/mvc-boilerplate/issues"
+    },
+    "homepage": "https://github.com/afonsobrandaointeli/mvc-boilerplate#readme"
 }
