--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.10",
+        "ejs-mate": "^4.0.0",
         "express": "^4.21.2",
         "express-session": "^1.18.1",
         "method-override": "^3.0.0",
