--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "ejs-mate": "^4.0.0",
         "express": "^4.21.2",
         "express-session": "^1.18.1",
+        "jsonwebtoken": "^9.0.2",
         "method-override": "^3.0.0",
         "pg": "^8.15.6"
     },
